--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ server.port=11000
 server.tomcat.uri-encoding=UTF-8
 ##redis
 #redis配置
-spring.session.store-type=redis
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
@@ -70,3 +69,8 @@ dubbo.consumer.timeout=60000
 xingYing.name = master
 xingYing.master.connect = false
 xingYing.master.name = master
+##token类设置
+token.secret=silentflower
+token.expireTime=86400000
+token.header=S-TOKEN
+token.head=Bearer
